fix responsive on mobile

--- a/style.css
+++ b/style.css
@@ -25,11 +25,10 @@ h1 {
 */
 
 #image {
-  width: 100%;
-  max-width: 525px;
+  width: 95%;
+  max-width: 666px;
   background-color: white;
-  border: 2px solid white;
-  margin: 10px 10px;
+  
   padding: 15px 15px 30px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
 }
@@ -41,9 +40,9 @@ div {
 
 
 div p {
-  width: 60%;
+  width: 75%;
   min-width: 300px;
-  overflow: scroll;
+  max-width: 666px;
   margin: 0 auto;
   padding: 10px 20px 10px 10px;
   font-size: 20px;
